@@ -344,3 +344,7 @@
 
 	* add edje_object_part_text_prediction_allow_set/get.
       These APIs can be used to set whether prediction feature is allowed or not.
+
+2012-02-14  Cedric Bail
+
+	* add a way to disable signal broadcasting introduced in edje 1.1.
